// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rubric editor Mod component 1`] = `
<div
  className="mod pad"
>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Rubric editor Mod component deletes self 1`] = `"<div class=\\"mod pad\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div>"`;

exports[`Rubric editor Mod component deletes self and parent 1`] = `"<div class=\\"mod pad\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div>"`;

exports[`Rubric editor ModList component 1`] = `
<div>
  <p
    contentEditable={false}
  >
    Mods:
  </p>
</div>
`;

exports[`Rubric editor Node component 1`] = `
<div
  className="rubric pad"
>
  <h1
    contentEditable={false}
  >
    Rubric
  </h1>
  <div
    className="parameter-node"
    contentEditable={false}
  >
    Type: undefined
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center add-button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Add Mod
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Rubric editor Node component adds child 1`] = `"<div class=\\"rubric pad\\"><h1 contenteditable=\\"false\\">Rubric</h1><div class=\\"parameter-node\\" contenteditable=\\"false\\">Type: undefined</div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center add-button\\"><button class=\\"button\\">Add Mod</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div>"`;

exports[`Rubric editor Node component adds child to existing mod list 1`] = `"<div class=\\"rubric pad\\"><h1 contenteditable=\\"false\\">Rubric</h1><div class=\\"parameter-node\\" contenteditable=\\"false\\">Type: undefined</div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center add-button\\"><button class=\\"button\\">Add Mod</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div>"`;

exports[`Rubric editor Rubric component deletes self 1`] = `"<div class=\\"rubric pad\\"><h1 contenteditable=\\"false\\">Rubric</h1><div class=\\"parameter-node\\" contenteditable=\\"false\\">Type: undefined</div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center add-button\\"><button class=\\"button\\">Add Mod</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\">×</button></div></div>"`;

exports[`Rubric editor extractTextToFragment copies the current text 1`] = `
Immutable.Record {
  "data": Immutable.Map {},
  "key": "11",
  "nodes": Immutable.List [
    Immutable.Record {
      "data": Immutable.Map {},
      "key": "12",
      "nodes": Immutable.List [
        Immutable.Record {
          "data": Immutable.Map {
            "hangingIndent": false,
          },
          "key": "13",
          "nodes": Immutable.List [
            Immutable.Record {
              "data": Immutable.Map {
                "indent": 0,
                "hangingIndent": false,
              },
              "key": "14",
              "nodes": Immutable.List [
                Immutable.Record {
                  "leaves": Immutable.List [
                    Immutable.Record {
                      "marks": Immutable.Set [],
                      "text": "selected text",
                    },
                  ],
                  "key": "15",
                },
              ],
              "type": "ObojoboDraft.Chunks.Text.TextLine",
            },
          ],
          "type": "ObojoboDraft.Chunks.Text",
        },
      ],
      "type": "oboeditor.component",
    },
  ],
}
`;

exports[`Rubric editor oboToSlate converts an OboComponent to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "failedResult": 0,
      "mods": Array [
        Object {
          "attemptCondition": 1,
          "reward": 10,
        },
      ],
      "passedResult": 100,
      "passingAttemptScore": 0,
      "unableToPassResult": 0,
    },
  },
  "nodes": Array [
    Object {
      "data": Object {
        "display": "Passing Score",
        "name": "passingAttemptScore",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Passed Result",
        "name": "passedResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 100,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Failed Result",
        "name": "failedResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Unable to Pass Result",
        "name": "unableToPassResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "nodes": Array [
        Object {
          "nodes": Array [
            Object {
              "data": Object {
                "display": "Attempt Condition",
                "name": "attemptCondition",
              },
              "nodes": Array [
                Object {
                  "leaves": Array [
                    Object {
                      "text": 1,
                    },
                  ],
                  "object": "text",
                },
              ],
              "object": "block",
              "type": "oboeditor.text-parameter",
            },
            Object {
              "data": Object {
                "display": "Reward",
                "name": "reward",
              },
              "nodes": Array [
                Object {
                  "leaves": Array [
                    Object {
                      "text": 10,
                    },
                  ],
                  "object": "text",
                },
              ],
              "object": "block",
              "type": "oboeditor.text-parameter",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Sections.Assessment.Rubric.Mod",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Sections.Assessment.Rubric.ModList",
    },
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Rubric editor oboToSlate converts an OboComponent to a Slate node without mods 1`] = `
Object {
  "data": Object {
    "content": Object {
      "failedResult": 0,
      "passedResult": 100,
      "passingAttemptScore": 0,
      "unableToPassResult": 0,
    },
  },
  "nodes": Array [
    Object {
      "data": Object {
        "display": "Passing Score",
        "name": "passingAttemptScore",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Passed Result",
        "name": "passedResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 100,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Failed Result",
        "name": "failedResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
    Object {
      "data": Object {
        "display": "Unable to Pass Result",
        "name": "unableToPassResult",
      },
      "nodes": Array [
        Object {
          "leaves": Array [
            Object {
              "text": 0,
            },
          ],
          "object": "text",
        },
      ],
      "object": "block",
      "type": "oboeditor.text-parameter",
    },
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Rubric editor plugins.renderNode calls next 1`] = `undefined`;

exports[`Rubric editor plugins.renderNode renders a modlist when passed 1`] = `
<ModList
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.Rubric.ModList",
    }
  }
/>
`;

exports[`Rubric editor plugins.renderNode renders a modlist when passed 2`] = `
<ModList
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.Rubric.ModList",
    }
  }
/>
`;

exports[`Rubric editor plugins.renderNode renders a modlist when passed 3`] = `
<Mod
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.Rubric.Mod",
    }
  }
/>
`;

exports[`Rubric editor plugins.renderNode renders the rubric when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Sections.Assessment.Rubric",
    }
  }
/>
`;

exports[`Rubric editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "[object Object]": undefined,
  "mods": Array [
    Object {
      "attemptCondition": "mockParameter",
      "reward": "mockParameter",
    },
  ],
  "type": "pass-fail",
}
`;

exports[`Rubric editor slateToObo converts a Slate node to an OboNode with no mods 1`] = `
Object {
  "type": "pass-fail",
}
`;
